# lightining-pass

./: Cargo.toml  README.md
crates/access_token/src/: token.rs
crates/api_server/: Cargo.toml
crates/api_server/src/: lib.rs  main.rs  state.rs
crates/api_server/src/routes/: access.rs  mod.rs  payment.rs  status.rs
crates/api_server/src/services/: access_service.rs  mod.rs  payment_service.rs  watcher_service.rs
crates/payment_core/: Cargo.toml
crates/payment_core/src/: lib.rs
crates/qr/: Cargo.toml
crates/qr/src/: lib.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/stellar_adapter/: Cargo.toml
crates/stellar_adapter/src/: client.rs  lib.rs  memo.rs  parser.rs  provider.rs  types.rs
docs/: github_issues_backlog.md
haske-ui/: index.html  package-lock.json  package.json
haske-ui/src/: App.jsx  index.css
haske-ui/src/api/: apiClient.ts
haske-ui/src/components/: AccessPass.jsx  Countdown.jsx  Header.jsx  LoadingSkeleton.jsx  QRBlock.jsx  StatusIndicator.jsx  TrustBadge.jsx
haske-ui/src/hooks/: useSessionRecovery.js
haske-ui/src/pages/: Checkout.jsx
haske-ui/src/store/: usePaymentStore.ts
web/: checkout.html
