[workspace]
members = [
    "crates/access_token",
    "crates/api_server",
    "crates/lightning_node",
    "crates/payment_core",
    "crates/qr",
    "crates/shared_types",
    "crates/stellar_adapter",
    "crates/verifier_cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = "0.30"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
qrcode = "0.14"
image = "0.25"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.8.0" }
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[patch.crates-io]
