[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
access_token = { path = "../access_token" }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
payment_core = { path = "../payment_core" }
qr = { path = "../qr" }
rand = { workspace = true }
serde = { workspace = true }
shared_types = { path = "../shared_types" }
stellar_adapter = { path = "../stellar_adapter" }
tokio = { workspace = true }
tower-http = { workspace = true }
